--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "useragent",
+  "name": "@kingyue/useragent",
   "version": "2.4.0",
   "packageManager": "pnpm@7.9.5",
   "description": "Fastest, most accurate & effecient user agent string parser, uses Browserscope's research for parsing",
